# auto-docs-system

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
app/: README.md  __init__.py  index.md
app/scripts/: README.md  cleanup.md  cleanup.py  index.md  release.toml
app/scripts/report/: README.md  release.toml
app/showcase/: README.md  references.md  release.toml
auto_docs/: __init__.py  docsite.py
auto_docs/contribution_registry/: README.md
auto_docs/excalidraw/: docsite-flow.json
auto_docs/theme_overrides/: main.html
auto_docs/theme_overrides/templates/: bottom_navigation.html  header.html  page.html
