[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "python-script-docs"
version = "0.1.0"
description = "Static documentation system for Python scripts stored under app/."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs>=1.6.1,<2.0",
  "mkdocs-shadcn>=0.10.4,<0.11",
  "mkdocs-shadcn-lwq>=0.10.5",
  "pymdown-extensions>=10.0,<11.0",
]

[project.scripts]
build-docs = "auto_docs.docsite:build_cli"
scan-docs = "auto_docs.docsite:scan_cli"

[tool.hatch.build.targets.wheel]
packages = ["auto_docs"]
